<resources>
    <string name="app_name">MyCompany</string>
    <string name="home_bottom" translatable="false">Home</string>
    <string name="finances_bottom">Finances</string>
    <string name="workers_bottom">Workers</string>
    <string name="manage_workers">Manage the employment</string>
    <string name="edit_contracts_workers">Edit details of agreements</string>
    <string name="working_hours">Custom working hours</string>
    <string name="payment_workers">The payroll</string>
    <string name="sum_amount_workers">The sum of payments this month:</string>
    <string name="startEditText">Start Time</string>
    <string name="ButtonSubmit">Add</string>
    <string name="name">First Name</string>
    <string name="surname">Surname</string>
    <string name="money">Hourly rate</string>
    <string name="cancel">Cancel</string>
    <string name="add_worker">Add Worker</string>
    <string name="remove_worker">Remove Worker</string>
    <string name="complete_allFields_dialog">Complete all fields</string>
    <string name="submit_work">Present workers</string>
    <string name="withdraw">Payment</string>
    <string name="check_payment_List">Payroll</string>
    <string name="currency">$</string>
    <string name="empty_text">"Working hours cannot be empty "</string>
    <string name="time">Time diff must be greater than 0</string>
    <string name="payroll_description">"Name  Surname  Earnings  Advance  Sum "</string>
    <string name="earnings">Earnings</string>
    <string name="advance">Advance</string>
    <string name="Sum">Sum</string>
    <string name="select_all">Select All</string>
    <string name="close">Close</string>
    <string name="withdraw_all">Withdraw all</string>
    <string name="add_workerDescr">Here you can add new worker to database</string>
    <string name="remove_workerDescr">Here you can remove worker from database</string>
    <string name="workStartTime">Start time of work</string>
    <string name="workStartTimeDescr">Enter the start time of work using the 24 hour clock displayed after pressing the field</string>
    <string name="workEndTime">Time of the end of work</string>
    <string name="workEndTImeDescr">Enter the end time of work using the 24 hour clock displayed after pressing the field</string>
    <string name="buttonAddHrsDescr">After completing work time click here to pick present workers</string>
    <string name="buttonAddHrs">Button Add</string>
    <string name="textViewTitleMoney">Workers sum of earnings</string>
    <string name="buttonPayrollDescr">Here u can check workers payroll with advances, hours and summary</string>
    <string name="dialogPreviousPayroll">Previous payrolls</string>
    <string name="edit_worker_descr">Edit name, surname, hourly rate</string>
    <string name="payroll_button_descr">Here u can withdraw money or add advance</string>
    <string name="image_payroll_history">Payroll History</string>
    <string name="image_payroll_historyDescr">Here u can check previous payrolls</string>
</resources>